[package]
name = "posgres_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.4"

[dependencies.jni]
version = "0.19"
features = [
    "invocation",
    "default"
]

[lib]
crate_type = ["cdylib"]     